# ProcessGenBackend

./: .env.example  .gitignore  README.md  api.py  comfyui_service.py  config.py  embeddings.py  milvus_service.py  models.py  pyproject.toml  rag_router.py  rerank.py  run_api.py  test_api.py  test_milvus_service.py  text_processor.py
data/workflow/: Flux-Dev-ComfyUI-Workflow.json
docs/superpowers/plans/: 2026-07-09-qt-vector-db-tool.md
docs/superpowers/specs/: 2026-07-09-qt-vector-db-tool-design.md
examples/: aiohttp_image_generation.py
qt_tool/: backend_client.py  config.py  main.py  workers.py
qt_tool/widgets/: add_image_page.py  add_text_page.py  collection_page.py  main_window.py  search_page.py  settings_dialog.py
refrance/: database.py  rag.py  text.py
