[project]
name = "processgenbackend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "pydantic>=2.12.5",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers==4.51.3",
    "uvicorn>=0.40.0",
]
