[project]
name = "processgenbackend"
version = "0.1.0"
description = "多模态嵌入和重排模型服务器 - Multimodal embedding and reranking model server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pillow>=10.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.9",
    "requests>=2.34.2",
    "sentence-transformers>=5.5.1",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.0.0",
    "uvicorn>=0.40.0",
    "pymilvus>=2.5.0",
    "PyMuPDF>=1.24.0",
]
